/*
Copyright 2019 The KubeEdge Authors.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
*/

syntax = "proto3";

package message;

message MessageRouter {
    // where the message come from
    string Source = 1;
    // where the message will send to
    string Group = 2;
    // what's the operation on resource
    string Operaion = 3;
    // what's the resource want to operate
    string Resouce = 4;
}

message MessageHeader {
    // the message uuid
    string ID = 1;
    // the response message parent id must be same with the message received
    // please use NewRespByMessage to new response message
    string ParentID = 2;
    // the time of creating
    sint64 Timestamp = 3;
    // the flag will be set in send sync
    bool Sync = 4;
    // message type
    string MessageType = 5;
}

message Message {
    MessageHeader header = 1;
    MessageRouter router = 2;
    bytes Content = 3;
}